<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.adolfo.platzigram.post.view.NewPostActivity">

    <include layout="@layout/actionbar_toolbar"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgPhoto"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:scaleType="centerCrop"
            android:background="@color/backgroundtext_card"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:theme="@style/EditTextBlack"
            android:layout_marginTop="@dimen/edittext_margin_createAccount">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edtTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_title" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:theme="@style/EditTextBlack"
            android:layout_marginTop="@dimen/edittext_margin_createAccount">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edtDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_description" />



        </android.support.design.widget.TextInputLayout>

        <ProgressBar
            android:id="@+id/progressBarNewPost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
        />

        <Button
            android:id="@+id/btnCreatePost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_button_createpost"
            android:theme="@style/RaisedButtonDark"/>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
